--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:postgres@0.0.0.0:5433/default-app-name_test?sslmode=disable
+DATABASE_URL=postgres://postgres:postgres@0.0.0.0:5433/go_crawler_test?sslmode=disable
