--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           go-version: 1.16.x
 
-      - name: Create ENV file
+      - name: Create .env file
         run: cp ".env.example" ".env"
 
       - name: Linters
