--- a/config/app.toml
+++ b/config/app.toml
@@ -1,4 +1,4 @@
-app_name = "default-app-name"
+app_name = "go-crawler"
 app_port = "8080"
 db_host = "0.0.0.0"
 db_password = "postgres"
@@ -6,9 +6,9 @@ db_username = "postgres"
 
 
 [debug]
-db_name = "default-app-name_development"
+db_name = "go_crawler_development"
 db_port = "5432"
 
 [test]
-db_name = "default-app-name_test"
+db_name = "go_crawler_test"
 db_port = "5433"
